# resumeval

./: .gitignore  Cargo.toml  Dockerfile  README.md  config.env  depot.json  errors.yaml  node1  set-env.sh  set-envs.sh
.github/workflows/: build.yaml  cd.yaml
.kiro/specs/resume-upload-fixes/: requirements.md
.sqlx/: query-013966b4c0c13f41541d42497cf04d5ce3f1ce5af22d1dd56ccb7fae1b0783c8.json  query-059aa569dc2cbcf6984351051c5171aa51a960a7b1a13c1d7f7ff88be3a583d3.json  query-12c621ce9fe7c6cfb193368bd8543986b20fb9636ab2393e9f4168acf7d556d1.json  query-18b1e40738a45bf453d264617f19d384e6107303a624c4ddc76b8dc95a513019.json  query-22ab72bab202243ee694bbbdfb5c756086d93fcc14fc788ab1f3f9b70ec86243.json  query-2d97dd6f6a82ade37c9db73c74a523790d168aeb6e8dbedce0349452b39aca16.json  query-3dbda1bd6a260909962a06e4fb4ffc2e9bc74c0a1bbdb8b082041a6e3dcca081.json  query-4428c2b871c53d2bce33d82a30f2d506a7d4372c90069344257f8365c521f596.json  query-51b8a94da6148144b5c44aedfef24ba5954ae80379162d1d1eaf7cf229e1fcc8.json  query-663d309f65794acf0de3f6a8d72bac0df1bb0cd57b7e5404a93a3f8beeab6e30.json  query-67941bd21368d26f7d27ea1063ba7f34f790bc9f2c945db8e4fb0f700f5a3682.json  query-6f4fc1a208a465421899515c8afb4bd1545e16e38433a11ffd7ff0a4d77f2626.json  query-6ffc7539960fb02289ac02d0823f34d1e14d0b4a9f2c5ad5fdb3e2f317f44be2.json  query-91afaea040b58c438033864aea3558f55c44003f7d46351fa5c1fb4a98b83061.json  query-95195a226d95c5b60be22597d659d7b39ecd97a37a456b4f61137e4c79c99d61.json  query-ba22927497ce7e23ea6640d86678815c9c17d522f07274e38cd6e8454a19140c.json  query-c05acf14bfe0651e2c6ed6808f6f31ebecc59b39866bd4e03b11ea2c829b9ab9.json  query-c1b3dd9b99c0c67fa887e7aacc34d081b42ea774d9220c08ee63a66ffca00d42.json  query-e63d235728fe9c30a727df4830e2c59442a8e56954802311e57478f9d763c41d.json
devops/: Dockerfile  dbcluster.yaml  docker-compose.yaml  essentials.sh  manifest.yaml  minio.yaml  pgvector_cm.yaml
devops/chart/: Chart.yaml  resumeval-0.1.0.tgz  values.yaml
migrations/: 20250506024054_users_tokens.sql  20250513153946_projects.sql  20251011140557_job.sql  20251110000001_evaluations.sql
src/: conf.rs  main.rs  prelude.rs  token.rs
src/cmd/: migrate.rs  mod.rs
src/pkg/: mod.rs
templates/: accept_invite.html  evaluation_details.html  home.html  logged_out.html  otp.html  verify.html
(+40 files in other folders)
